--- a/style.css
+++ b/style.css
@@ -251,6 +251,15 @@ a:visited {
     min-width: 375px;
     padding: 3rem;
   }
+
+  .form {
+    gap: 0.5rem 1.5rem;
+  }
+
+  .form__label,
+  .form__input {
+    font-size: 1.3rem;
+  }
 }
 
 @media screen and (max-width: 840px) {
@@ -259,7 +268,7 @@ a:visited {
   }
 
   .sidebar {
-    min-width: 320px;
+    min-width: 315px;
     height: 100%;
     position: absolute;
     left: -150%;
@@ -275,6 +284,15 @@ a:visited {
   .sidebar__toggle,
   .sidebar__close {
     display: inline-block;
+  }
+  
+  .form__label {
+    font-size: 1.2rem;
+  }
+
+  .form__input {
+    padding: 0.3rem 0.7rem;
+    font-size: 1.2rem;
   }
 
   .leaflet-control {
